#
#
#

# To make the list use:
# /bin/find . -name \*.cpp -o -name \*.h | sort > all.txt
set(OLQT_SRC
    ./array.cpp
    ./array.h
    ./AssertionError.cpp
    ./AssertionError.h
    ./asserts.h
    ./centerconstraint.h
    ./Collection.h
    ./CollectionEventType.h
    ./color.h
    ./colorlike.h
    ./control.h
    ./control/Attribution.h
    ./control/Control.h
    ./control/FullScreen.h
    ./control/MousePosition.h
    ./control/OverviewMap.h
    ./control/Rotate.h
    ./control/ScaleLine.h
    ./control/util.h
    ./control/Zoom.h
    ./control/ZoomSlider.h
    ./control/ZoomToExtent.h
    ./coordinate.h
    ./css.h
    ./Disposable.cpp
    ./Disposable.h
    ./dll_export.h
    ./dom.h
    ./easing.h
    ./events.cpp
    ./events.h
    ./events/condition.h
    ./events/Event.cpp
    ./events/Event.h
    ./events/EventTarget.cpp
    ./events/EventTarget.h
    ./events/EventType.cpp
    ./events/EventType.h
    ./events/KeyCode.h
    ./extent.h
    ./extent/Corner.h
    ./extent/Relationship.h
    ./Feature.h
    ./featureloader.h
    ./format.h
    ./format/EsriJSON.h
    ./format/Feature.h
    ./format/filter.h
    ./format/filter/And.h
    ./format/filter/Bbox.h
    ./format/filter/Comparison.h
    ./format/filter/ComparisonBinary.h
    ./format/filter/Contains.h
    ./format/filter/During.h
    ./format/filter/EqualTo.h
    ./format/filter/Filter.h
    ./format/filter/GreaterThan.h
    ./format/filter/GreaterThanOrEqualTo.h
    ./format/filter/Intersects.h
    ./format/filter/IsBetween.h
    ./format/filter/IsLike.h
    ./format/filter/IsNull.h
    ./format/filter/LessThan.h
    ./format/filter/LessThanOrEqualTo.h
    ./format/filter/LogicalNary.h
    ./format/filter/Not.h
    ./format/filter/NotEqualTo.h
    ./format/filter/Or.h
    ./format/filter/Spatial.h
    ./format/filter/Within.h
    ./format/FormatType.h
    ./format/GeoJSON.h
    ./format/GML.h
    ./format/GML2.h
    ./format/GML3.h
    ./format/GMLBase.h
    ./format/GPX.h
    ./format/IGC.h
    ./format/JSONFeature.h
    ./format/KML.h
    ./format/MVT.h
    ./format/OSMXML.h
    ./format/OWS.h
    ./format/Polyline.h
    ./format/TextFeature.cpp
    ./format/TextFeature.h
    ./format/TopoJSON.h
    ./format/WFS.h
    ./format/WKT.h
    ./format/WMSCapabilities.h
    ./format/WMSGetFeatureInfo.h
    ./format/WMTSCapabilities.h
    ./format/XLink.h
    ./format/XML.h
    ./format/XMLFeature.h
    ./format/xsd.h
    ./functions.h
    ./Geolocation.cpp
    ./Geolocation.h
    ./GeolocationProperty.h
    ./geom.h
    ./geom/Circle.h
    ./geom/flat/area.h
    ./geom/flat/center.h
    ./geom/flat/closest.h
    ./geom/flat/contains.h
    ./geom/flat/deflate.h
    ./geom/flat/flip.h
    ./geom/flat/geodesic.h
    ./geom/flat/inflate.h
    ./geom/flat/interiorpoint.h
    ./geom/flat/interpolate.h
    ./geom/flat/intersectsextent.h
    ./geom/flat/length.h
    ./geom/flat/orient.h
    ./geom/flat/reverse.h
    ./geom/flat/segments.h
    ./geom/flat/simplify.h
    ./geom/flat/straightchunk.h
    ./geom/flat/textpath.h
    ./geom/flat/topology.h
    ./geom/flat/transform.h
    ./geom/Geometry.h
    ./geom/GeometryCollection.h
    ./geom/GeometryLayout.h
    ./geom/GeometryType.h
    ./geom/LinearRing.h
    ./geom/LineString.h
    ./geom/MultiLineString.h
    ./geom/MultiPoint.h
    ./geom/MultiPolygon.h
    ./geom/Point.h
    ./geom/Polygon.h
    ./geom/SimpleGeometry.h
    ./Graticule.h
    ./has.h
    ./Image.h
    ./ImageBase.h
    ./ImageCanvas.h
    ./ImageState.h
    ./ImageTile.h
    ./index.cpp
    ./index.h
    ./interaction.h
    ./interaction/DoubleClickZoom.h
    ./interaction/DragAndDrop.h
    ./interaction/DragBox.h
    ./interaction/DragPan.h
    ./interaction/DragRotate.h
    ./interaction/DragRotateAndZoom.h
    ./interaction/DragZoom.h
    ./interaction/Draw.h
    ./interaction/Extent.h
    ./interaction/Interaction.h
    ./interaction/KeyboardPan.h
    ./interaction/KeyboardZoom.h
    ./interaction/Modify.h
    ./interaction/MouseWheelZoom.h
    ./interaction/PinchRotate.h
    ./interaction/PinchZoom.h
    ./interaction/Pointer.h
    ./interaction/Property.h
    ./interaction/Select.h
    ./interaction/Snap.h
    ./interaction/Translate.h
    ./jsport.h
    ./Kinetic.h
    ./layer.h
    ./layer/Base.h
    ./layer/Group.h
    ./layer/Heatmap.h
    ./layer/Image.h
    ./layer/Layer.h
    ./layer/Property.h
    ./layer/Tile.h
    ./layer/TileProperty.h
    ./layer/Vector.h
    ./layer/VectorRenderType.h
    ./layer/VectorTile.h
    ./layer/VectorTileRenderType.h
    ./LayerType.h
    ./loadingstrategy.h
    ./Map.h
    ./MapBrowserEvent.h
    ./MapBrowserEventHandler.h
    ./MapBrowserEventType.h
    ./MapBrowserPointerEvent.h
    ./MapEvent.h
    ./MapEventType.h
    ./MapProperty.h
    ./math.h
    ./net.h
    ./obj.h
    ./Object.cpp
    ./Object.h
    ./ObjectEventType.cpp
    ./ObjectEventType.h
    ./Observable.cpp
    ./Observable.h
    ./optional.h
    ./Overlay.h
    ./OverlayPositioning.h
    ./PluggableMap.h
    ./pointer/EventSource.h
    ./pointer/EventType.h
    ./pointer/MouseSource.h
    ./pointer/MsSource.h
    ./pointer/NativeSource.h
    ./pointer/PointerEvent.h
    ./pointer/PointerEventHandler.h
    ./pointer/TouchSource.h
    ./proj.h
    ./proj/epsg3857.cpp
    ./proj/epsg3857.h
    ./proj/epsg4326.h
    ./proj/proj4.h
    ./proj/Projection.h
    ./proj/projections.h
    ./proj/transforms.h
    ./proj/Units.h
    ./render.h
    ./render/Box.h
    ./render/canvas.h
    ./render/canvas/ImageReplay.h
    ./render/canvas/Immediate.h
    ./render/canvas/Instruction.h
    ./render/canvas/LineStringReplay.h
    ./render/canvas/PolygonReplay.h
    ./render/canvas/Replay.h
    ./render/canvas/ReplayGroup.h
    ./render/canvas/TextReplay.h
    ./render/Event.h
    ./render/EventType.h
    ./render/Feature.h
    ./render/replay.h
    ./render/ReplayGroup.h
    ./render/ReplayType.h
    ./render/VectorContext.h
    ./render/webgl.h
    ./render/webgl/CircleReplay.h
    ./render/webgl/circlereplay/defaultshader.h
    ./render/webgl/circlereplay/defaultshader/Locations.h
    ./render/webgl/ImageReplay.h
    ./render/webgl/Immediate.h
    ./render/webgl/LineStringReplay.h
    ./render/webgl/linestringreplay/defaultshader.h
    ./render/webgl/linestringreplay/defaultshader/Locations.h
    ./render/webgl/PolygonReplay.h
    ./render/webgl/polygonreplay/defaultshader.h
    ./render/webgl/polygonreplay/defaultshader/Locations.h
    ./render/webgl/Replay.h
    ./render/webgl/ReplayGroup.h
    ./render/webgl/TextReplay.h
    ./render/webgl/TextureReplay.h
    ./render/webgl/texturereplay/defaultshader.h
    ./render/webgl/texturereplay/defaultshader/Locations.h
    ./renderer/canvas/ImageLayer.h
    ./renderer/canvas/IntermediateCanvas.h
    ./renderer/canvas/Layer.h
    ./renderer/canvas/Map.h
    ./renderer/canvas/TileLayer.h
    ./renderer/canvas/VectorLayer.h
    ./renderer/canvas/VectorTileLayer.h
    ./renderer/Layer.h
    ./renderer/Map.h
    ./renderer/vector.h
    ./renderer/webgl/defaultmapshader.h
    ./renderer/webgl/defaultmapshader/Locations.h
    ./renderer/webgl/ImageLayer.h
    ./renderer/webgl/Layer.h
    ./renderer/webgl/Map.h
    ./renderer/webgl/TileLayer.h
    ./renderer/webgl/tilelayershader.h
    ./renderer/webgl/tilelayershader/Locations.h
    ./renderer/webgl/VectorLayer.h
    ./reproj.h
    ./reproj/common.h
    ./reproj/Image.h
    ./reproj/Tile.h
    ./reproj/Triangulation.h
    ./resolutionconstraint.h
    ./rotationconstraint.cpp
    ./rotationconstraint.h
    ./size.h
    ./source.h
    ./source/BingMaps.h
    ./source/CartoDB.h
    ./source/Cluster.h
    ./source/common.h
    ./source/Image.h
    ./source/ImageArcGISRest.h
    ./source/ImageCanvas.h
    ./source/ImageMapGuide.h
    ./source/ImageStatic.h
    ./source/ImageWMS.h
    ./source/OSM.h
    ./source/Raster.h
    ./source/Source.h
    ./source/Stamen.h
    ./source/State.h
    ./source/Tile.h
    ./source/TileArcGISRest.h
    ./source/TileDebug.h
    ./source/TileEventType.h
    ./source/TileImage.h
    ./source/TileJSON.h
    ./source/TileWMS.h
    ./source/UrlTile.h
    ./source/UTFGrid.h
    ./source/Vector.h
    ./source/VectorEventType.h
    ./source/VectorTile.h
    ./source/WMSServerType.h
    ./source/WMTS.h
    ./source/WMTSRequestEncoding.h
    ./source/XYZ.h
    ./source/Zoomify.h
    ./sphere.h
    ./string.cpp
    ./string.h
    ./structs/LinkedList.h
    ./structs/LRUCache.cpp
    ./structs/LRUCache.h
    ./structs/PriorityQueue.h
    ./structs/RBush.h
    ./style.h
    ./style/Atlas.h
    ./style/AtlasManager.h
    ./style/Circle.h
    ./style/Fill.h
    ./style/Icon.h
    ./style/IconAnchorUnits.h
    ./style/IconImage.h
    ./style/IconImageCache.h
    ./style/IconOrigin.h
    ./style/Image.h
    ./style/RegularShape.h
    ./style/Stroke.h
    ./style/Style.h
    ./style/Text.h
    ./style/TextPlacement.h
    ./Tile.cpp
    ./Tile.h
    ./TileCache.cpp
    ./TileCache.h
    ./tilecoord.h
    ./tilegrid.cpp
    ./tilegrid.h
    ./tilegrid/common.h
    ./tilegrid/TileGrid.cpp
    ./tilegrid/TileGrid.h
    ./tilegrid/WMTS.h
    ./TileQueue.h
    ./TileRange.cpp
    ./TileRange.h
    ./TileState.h
    ./tileurlfunction.h
    ./transform.h
    ./uri.cpp
    ./uri.h
    ./util.cpp
    ./util.h
    ./vec/mat4.h
    ./VectorImageTile.h
    ./VectorTile.cpp
    ./VectorTile.h
    ./View.h
    ./ViewHint.h
    ./ViewProperty.h
    ./webgl.h
    ./webgl/Buffer.h
    ./webgl/Context.h
    ./webgl/ContextEventType.h
    ./webgl/Fragment.h
    ./webgl/Shader.h
    ./webgl/Vertex.h
    ./WebGLMap.h
    ./xml.h
)

add_library(olqt SHARED ${OLQT_SRC})
set_target_properties(olqt PROPERTIES FOLDER "src")
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/.. FILES ${OLQT_SRC})

# end of file